# ngfw-analytics

./: README.md  pyproject.toml
src/ngfw_analytics/: __init__.py  cli.py  loader.py  models.py  report.py  run.py
src/ngfw_analytics/detectors/: __init__.py  bruteforce.py  port_scan.py
tests/: __init__.py
tests/e2e/: test_full_flow.py
tests/unit/: test_detectors_bruteforce.py  test_detectors_port_scan.py  test_loader.py  test_report.py
