[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ngfw-analytics"
version = "0.1.0"
description = "NGFW Analytics — обнаружение подозрительной активности и ежедневный отчёт"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ngfw-analytics = "ngfw_analytics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
